# milk-v-duo-play

./: .gitignore  rust_toolchain_setup.sh
c/led/: Makefile  README.md  blink.c  ledcontrol.c
c/ledcontrol/: README.md
milkvrust/: Cargo.toml
milkvrust/src/: main.rs
